--- a/02. Network Routing Wiki.md
+++ b/02. Network Routing Wiki.md
@@ -1,378 +1,62 @@
 # HOW PACKETS GET THROUGH THE NETWORK
 
-<details>
-<summary>Do not read this section</summary>
-In my summary of the `7 Layer OSI Model` I talked about 3 techniques that packets use to get routed through the internet, `Hop by Hop`, `End to End`, and `Service to Service`. These techniques facilitate the ability to get a message from one machine to another, and the way they work is enabled by the layers they lie in.
-
-When passing in the network the packets will be processed and transformed by different network devices, so to know what happens to a packet we need to learn and understand those devices:
-
-## Switch
-
-The switch is the device needed to physically connect multiple computers to a LAN (a Local Area Network, A hub can also be used to do that but it is a very stupid device and generally not used). The devices connect to the switch using network cables and the slot that they use to physically connect to the switch is called `a port`. The switch isn't aware of the existence of other devices, it just routes packets through itself based on the MAC address written as the destination address in the L2 header of that packet.
-
-```
-.         |    __                        .------.                        __
-.         |   [Ll] ___________________P1 | ---> | P2___________________ [Ll]
-.         |   ====                    P3 | <--- | P4                    ====
-MACHINE   |  HOST A                  /   '------'   \                  HOST B
-MAC ADD   |   a2a2                  /                \                  b3b3
-.         |    __                  /                  \                  __
-.         |   [Ll] _______________/                    \_______________ [Ll]
-.         |   ====                                                      ====
-MACHINE   |  HOST C                                                    HOST D
-MAC ADD   |   d7d7                                                      f1f1
-```
-
-The way the routing works is through a process of translating MAC addresses to switch ports, **a single port can be bound to multiple MAC addresses**. And the translation happens inside of a thing called the `MAC Address Table`, essentially the MAC address table is like a telephone book of MAC addresses that tells it what port to use to reach that address. The MAC Address Table begins empty.
-
-
-| MAC ADDRESS   | PORT          |
-| ------------- | ------------- |
-| Empty         |               |
-
-
-A switch performs three actions. First, **Learning**:
-> When the switch receives a packet with **an unknown MAC address** it will register it in the MAC address table. The switch will take the `source MAC address` of the packet and the `port it was received on` and will write both down as bound in the MAC address table.
-
-But what happens when a packet needs to be sent to a MAC address that isn't recognized by the switch, then its only option is to perform it's second operation and that is **Flooding**. The switch will send the packet to all of the ports except the port that it was sent from, when the endpoints at the other sides of the ports receive the packet they will inspect the L2 header and only accept the packet if it matches their own MAC address, otherwise they will drop it silently.
-
-If a packet arrives at the switch with a MAC address that is registered it will translate that MAC address using the MAC address table and **Forward** that packet to the designated port. Lastly, it doesn't matter to the switch what device is on the other end of a port. It can be a computer, a router, or even another switch, all the switch looks at is the MAC address, the L2 Header.
-
-Most communication happens through the switch but keep in mind that it can also occur **with** the switch, and that is possible because **a switch has its own MAC and IP addresses**, so when communicating with a switch it essentially acts like any other computer in the networking aspect.
-
--------------------------------------------------------------------------------------------------------------------
-
-Let's take the network shown above and demonstrate, `HOST A` wants to send a packet to `HOST B`. `HOST A` 
-```diff
-- (I think the sentence above is incomplete)
-```
-```
-.         |    __                        .------.                        __
-.         |   [Ll] __________________ P1 | ---> | P2 __________________ [Ll]
-.         |   ====     --PACKET-->    P3 | <--- | P4    ?               ====
-MACHINE   |  HOST A                  /   '------'   \                  HOST B
-MAC ADD   |   a2a2               ?  /                \  ?               b3b3
-.         |    __                  /                  \                  __
-.         |   [Ll] _______________/                    \_______________ [Ll]
-.         |   ====                                                      ====
-MACHINE   |  HOST C                                                    HOST D
-MAC ADD   |   d7d7                                                      f1f1
-```
-The switch learns HOST A's MAC Address to its `MAC ADDRESS TABLE`.
-
-| MAC ADDRESS   | PORT          |
-| ------------- | ------------- |
-| a2a2          | P1            |
-
-Then it floods the packet to the network since it doesn't know the MAC Address translation of "b3b3".
-```
-SWITCH -.
-        |
-        :---------> P2
-        :---------> P3
-        '---------> P4
-
-.         |    __                        .------.                        __
-.         |   [Ll] __________________ P1 | ---> | P2 __________________ [Ll]
-.         |   ====                    P3 | <--- | P4    --PACKET-->V    ====
-MACHINE   |  HOST A                  /   '------'   \                  HOST B
-MAC ADD   |   a2a2                  /                \                  b3b3
-.         |    __                  /                  \                  __
-.         |   [Ll] _______________/                    \_______________ [Ll]
-.         |   ====   X<--PACKET--                        --PACKET-->X   ====
-MACHINE   |  HOST C                                                    HOST D
-MAC ADD   |   d7d7                                                      f1f1
-```
-*Notice the packet is only accepted on HOST B*
-
-And this is how the packet reaches HOST B. However, also notice that `the Switch did not learn the port that HOST B belongs to`.
-Now, what if `HOST B` wants to reply to `HOST A`, it will send a packet back with `HOST A`'s MAC Address in the L2 Header.
-
-```
-.         |    __                        .------.                        __
-.         |   [Ll] __________________ P1 | ---> | P2 __________________ [Ll]
-.         |   ====                    P3 | <--- | P4    <--PACKET--     ====
-MACHINE   |  HOST A                  /   '------'   \                  HOST B
-MAC ADD   |   a2a2                  /                \                  b3b3
-.         |    __                  /                  \                  __
-.         |   [Ll] _______________/                    \_______________ [Ll]
-.         |   ====                                                      ====
-MACHINE   |  HOST C                                                    HOST D
-MAC ADD   |   d7d7                                                      f1f1
-```
-The switch will then **learn** `HOST B`'s MAC Address and map it in the MAC address Table. and also translate the destination MAC address to port 1.
-
-```
-b3b3(HOST B) --> a2a2(HOST A)
-.                 ^
-.         .-------'
-.         |
-```
-
-| MAC ADDRESS   | PORT          |
-| ------------- | ------------- |
-| a2a2          | P1            |
-| b3b3          | P2            |
-
-Where it will then **Forward** the packet.
-
-```
-.         |    __                        .------.                        __
-.         |   [Ll] __________________ P1 | ---> | P2 __________________ [Ll]
-.         |   ====     <--PACKET--    P3 | <--- | P4                    ====
-MACHINE   |  HOST A                  /   '------'   \                  HOST B
-MAC ADD   |   a2a2                  /                \                  b3b3
-.         |    __                  /                  \                  __
-.         |   [Ll] _______________/                    \_______________ [Ll]
-.         |   ====                                                      ====
-MACHINE   |  HOST C                                                    HOST D
-MAC ADD   |   d7d7                                                      f1f1
-```
--------------------------------------------------------------------------------------------------------------------
-
-There is just one more special MAC address we need to get familiar with before we finish studying switches and it's :**FFFFFF:FFFFFF** that is the Broadcast address, this will make the switch always flood.
-
-
-## ARP
-
-**ARP**, or **A**ddress **R**esolution **P**rotocol is the protocol that is used to "translate" layer 3 IP Adresses to layer 2 MAC addresses, it is very simple. Technically, the protocol doesn't belong in the 3rd layer even though it does invlove IP addresses, this means that it is only possible to perform inside a LAN.
-
-### THE WAY IT WORKS
-
-```
- HOST A                                                      HOST B
- __   _                      .------.                        __   _
-[Ll] |=| ________________ P1 | ---> | P2 __________________ [Ll] |=|
-==== '-'                     | <--- |                       ==== '-'
-10.1.1.22                    '------'                       10.1.1.37
-a2a2                                                        ?
-```
-
-Let's say I am `HOST A` and I want to send some information to `HOST B`, a ping for demonstration.
-In order to perform any kind of communication on the internet the computer must know the IP Address of the endpoint it is trying to communicate with. So let's say I put it in manually.
-
-The computer knows what the IP of the other machine is but not the MAC so it will use the ARP protocol.
-
-```
-+-------------------------------+
-| Address Resolution Protocol   |
-| (Request)                     |
-|-------------------------------|
-| Hello, if 10.1.1.37 is out    |
-| there please tell me your MAC |
-| address. I am 10.1.1.22/a2a2. |
-|                               |
-'-------------------------------'
-| LAYER 2 HEADER                |
-|-------------------------------|
-| SRC MAC                  a2a2 |
-| DST MAC         ffffff:ffffff | // MAC Address "ffffff:ffffff" stands for broadcast, this means
-'-------------------------------' // that the message will reach all machines in the lan.
-
- HOST A                                                      HOST B
- __   _    --ARP-REQ->       .------.                        __   _
-[Ll] |=| ________________ P1 | ---> | P2 __________________ [Ll] |=|
-==== '-'                     | <--- |                       ==== '-'
-10.1.1.22                    '------'                       10.1.1.37
-a2a2                                                        ?
-```
-
-This is what the arp header looks like, if you look carefuly you might notice that the DST MAC is ffffff:ffffff which is the broadcasting address. So we can start to put an image together of what will happen.
-
-`HOST A` sends a message asking any computer identifying with the IP address "10.1.1.37" to return a message with their MAC address to 10.1.1.22/a2a2, Ip address and MAC address respectively.
-
-The switch will take the packet, duplicate it and send it on all ports except `P1`. Then HOST B will see that the packet is dedicated to them since it has their IP Address. and they will use the given ip and mac address to send the reply back saying that their mac address is "b3b3".
-
-```
-+-------------------------------+
-| Address Resolution Protocol   |
-| (Reply)                       |
-|-------------------------------|
-| I am 10.1.1.37 my MAC is b3b3 |
-|                               |
-'-------------------------------'
-| LAYER 2 HEADER                |
-|-------------------------------|
-| SRC MAC                  b3b3 |
-| DST MAC                  a2a2 |
-'-------------------------------'
-
- HOST A                                                      HOST B
- __   _                      .------.      <-ARP-RESP--      __   _
-[Ll] |=| ________________ P1 | ---> | P2 __________________ [Ll] |=|
-==== '-'                     | <--- |                       ==== '-'
-10.1.1.22                    '------'                       10.1.1.37
-a2a2                                                        b3b3
-```
-
-And that is how devices find out mac addresses in a LAN network.
-
-
-
-## Router
-
-The router is a layer 3 network component used to move data between different networks, this process is called **routing** (The process of moving informationg inside of a network is called **switching**). To better explain what exactly constitues a router and how it is different than a host, here is the [RC 2460](https://www.rfc-editor.org/rfc/rfc2460) definition of a router (The RFC is about IPv6 but the definition of a router applies to IPv4 as well):
-
->   node        - a device that implements IPv6.
->
->   router      - a node that forwards IPv6 packets not explicitly
->                 addressed to itself.
->
->   host        - any node that is not a router.
-
-```diff
-- (Wy IPv6?)
-```
-
-This basically means that **a host would drop a packet that is not intended for it**, but a **router** will try to **route it forward**.
-
-Since routers are connected to multiple networks at once and must maintain the ability to interact with all of them (to route packets), **they must have an IP + MAC address on all networks they participate in AND must maintain a map of all of those networks.** This map is called a `Routing Table`. When a router gets a packet destined to a network it doesn't know how to route to, i.e it doesn't exist in it's routing table, it will drop it, otherwise it will send it to the next node in the chain to the target address. 
-```diff
-- (If the packet is dropped or forwarded is dependent on configuration)
-```
-
-```
-+--------------10.0.55.x/24-------------+              +--------------10.0.44.x/24-------------+                +--10.0.66.x/24--+
-|            __   _                     |              |                     __   _            |                |                |
-|       .3  [Ll] |=| ______             |              |             ______ [Ll] |=|   .6      |                |                |
-|     f5f5  ==== '-'       \            |              |            /       ==== '-' a2a2      |                |                |
-|                           \           | eth1    eth0 |           /                           |   eth1    eth0 |                |
-|            __   _          \ +----+   |    +----+    |   +----+ /          __   _            |      +----+    |                |
-|       .4  [Ll] |=| _________\| S1 |------> | R1 | <------| S2 |/_________ [Ll] |=|  .20      | .--> | R2 | <----      ...      |
-|     e1e1  ==== '-'          /+----+   | .2 +----+ .1 |   +----+\          ==== '-' b3b3      | | .2 +----+ .1 |                |
-|                            /          | c444    fff2 |     |    \                            | | dd22    ee34 |                |
-|            __   _         /           |  ^        ^  |     |     \         __   _            | |              |                |
-|       .2  [Ll] |=| ______/            |  |        |  |     |      \______ [Ll] |=|   .2      | |              |                |
-|     22ec  ==== '-'                    |  '        '  |     |              ==== '-' d4d4      | |              |                |
-|                                       |   \      /   |     |                                 | |              |                |
-+---------------------------------------+    \    /    +-----|---------------------------------+ |              +----------------+
-.                                             \  /           |___________________________________|
-.                                              \/
-.                                   Router interfaces IP address
-.                                   And MAC.
-```
-
-```diff
-- (Why is S2 connected to 2 roters?)
-```
-
-Now, there are three types of routing paths that can be written into a routing tables. 
-
-First, the `Directly Connected`, the networks that interface directly into the router are written into the **Routing Table** when configured on the router. For example Router 1 (R1) will have two directly connected networks, 10.0.55.0 and 10.0.44.0 and they will be written like that:
-
-| **R1 ROUTING TABLE** | TYPE  | NETWORK       | INTERFACE   |   |   | **R2 ROUTING TABLE** | TYPE  | NETWORK       | INTERFACE   |
-| -------------------- | ----- | ------------- | ----------- | - | - | -------------------- | ----- | ------------- | ----------- |
-| 1                    | DC    | 10.0.44.0     | Eth0        |   |   | 1                    | DC    | 10.0.66.0     | Eth0        |
-| 2                    | DC    | 10.0.55.0     | Eth1        |   |   | 2                    | DC    | 10.0.44.0     | Eth1        |
-
-Second, the `Static Routing`. If Router 1 (R1) was to get a packet destined to 10.0.66.50 it would start searching the Routing Table and won't find the netwrok since it's not directly connected, meaning it would drop it. That is what static routing is for, basically static routes are manually entered networking routes. Supposedly, if I want to get a packet from the network 10.0.55.0 to the network 10.0.66.0 which is connected to Router 2 (R2), I would have to go through it. To get to Router 2 I need to have some sort of known interface with it, which in this case is network 10.0.44.0, where the router R2 posesses the address of 10.0.44.2. So if I want to put that in the Routing Table I would do:
-
-| **R1 ROUTING TABLE** | TYPE     | NETWORK       | INTERFACE   |   |   | **R2 ROUTING TABLE** | TYPE     | NETWORK       | INTERFACE   |
-| -------------------- | -------- | ------------- | ----------- | - | - | -------------------- | -------- | ------------- | ----------- |
-| 1                    | DC       | 10.0.44.0     | Eth0        |   |   | 1                    | DC       | 10.0.66.0     | Eth0        |
-| 2                    | DC       | 10.0.55.0     | Eth1        |   |   | 2                    | DC       | 10.0.44.0     | Eth1        |
-| 3                    | Static   | 10.0.66.0     | 10.0.44.2   |   |   | 3                    | Static   | 10.0.55.0     | 10.0.44.1   |
-*I also added 10.0.44.0 to R2's routing table*
-
-```diff
-- (Please explain to me this table in person)
-```
-
-Then when the packet reaches Router 2 the other router (R2) will route it to it's DC (Directly connected) network.
-
-Lastly, `Dynamic Routing`. When setting a Router to `Dynamic Routing` it will occasionally share it's known networks to other routers connected to it, Meaning that if we take the Routing tables from the first routing option (The ones without static routes) and enable Dynamic Routing on both rouers they would share their routing tables. When a router shares their routing table information it will add all the network it is not familiar with. So if we take the routing tables from example 1 and enable `Dynamic Routing` this is what will happen:
-
-1. The routers' routing tables before sharing their networks. 
-   
-| **R1 ROUTING TABLE** | TYPE      | NETWORK       | INTERFACE   |   |   | **R2 ROUTING TABLE** | TYPE      | NETWORK       | INTERFACE   |
-| -------------------- | --------- | ------------- | ----------- | - | - | -------------------- | -----     | ------------- | ----------- |
-| 1                    | DC        | 10.0.44.0     | Eth0        |   |   | 1                    | DC        | 10.0.66.0     | Eth0        |
-| 2                    | DC        | 10.0.55.0     | Eth1        |   |   | 2                    | DC        | 10.0.44.0     | Eth1        |
-| -                    | -         | -             | -           |   |   | -                    | -         | -             | -           |
-
-2. R1 shares t's known networks, R2 recognizes 10.0.44.0 so it dismisses it but does not recognize 10.0.55.0 so it adds it to it's routing table from the addess it got it from.
-
-| **R1 ROUTING TABLE** | TYPE      | NETWORK       | INTERFACE   |   |   | **R2 ROUTING TABLE** | TYPE      | NETWORK       | INTERFACE   |
-| -------------------- | --------- | ------------- | ----------- | - | - | -------------------- | -----     | ------------- | ----------- |
-| 1                    | DC        | 10.0.44.0     | Eth0        |   |   | 1                    | DC        | 10.0.66.0     | Eth0        |
-| 2                    | DC        | 10.0.55.0     | Eth1        |   |   | 2                    | DC        | 10.0.44.0     | Eth1        |
-| -                    | -         | -             | -           |   |   | 3                    | Dynamic   | 10.0.55.0     | 10.0.44.1   |
-
-3. R2 shares t's known networks, R1 recognizes 10.0.44.0 so it dismisses it but does not recognize 10.0.66.0 so it adds it to it's routing table from the addess it got it from.
-
-| **R1 ROUTING TABLE** | TYPE      | NETWORK       | INTERFACE   |   |   | **R2 ROUTING TABLE** | TYPE      | NETWORK       | INTERFACE   |
-| -------------------- | --------- | ------------- | ----------- | - | - | -------------------- | -----     | ------------- | ----------- |
-| 1                    | DC        | 10.0.44.0     | Eth0        |   |   | 1                    | DC        | 10.0.66.0     | Eth0        |
-| 2                    | DC        | 10.0.55.0     | Eth1        |   |   | 2                    | DC        | 10.0.44.0     | Eth1        |
-| Dynamic              | Dynamic   | 10.0.66.0     | 10.0.44.2   |   |   | 3                    | Dynamic   | 10.0.55.0     | 10.0.44.1   |
-
-Hooray, now, without any intervention, networks 10.0.55.0 and 10.0.66.0 can communicate!
-</details>
-
-
-# Question 2
-
 Computers on the network communicate by sending each other messages containing data, this data is then used by the computers to perform certein tasks. But how do these messages know where to go? Network devices and addresses.
 
 Network devices are devices that are used to get messages from one machine to another inside of a network, all the computers in the network are connected. Depending on the size and configuration of the network a different device will be needed. A device will be able to communicate to another device using two different addresses: IP and MAC. A MAC address is a unique address to that device only, and IP address is a higher layer address that tells the device where the machine is. Basicaly MAC address means "Who am I?" and an IP address means "Where am I?".
 
-> ### Switch
->
-> A switch is a device that is used for creating **Local Area Networks**, All the devices that are connected to the switch will be able to find eachother by each device's MAC address. The device connect to the switch using a cable inserted to a physical port at the switch, The switch then knows to map each machine's MAC address to the physical port using the MAC address from the messages that is sent from that port.
->
-> Devices can also send messages to all the devices connected to the switch, doing something called a **broadcast**.
->
-> The switch's job and scope is to perform message forwarding hop by hop.
+### <font size=6>Switch</font>
+The switch is a device on the 2nd OSI layer. It's use is to forward packets based on MAC addresses. When multiple machines are connected to the switch, they create what's known as a *Local Area Network*. All the machines in the *LAN* are then able to communicate using each other's MAC addresses. Machines connect to the switch using a physical slot in the switch called a 'physical port', meaning they need to be close to eachother (hence "local area").
 
-Switch are used to connect geograhically closed computers to a network and let them comunicat with eachother, but a switch only has a limited amount of ports. So how are so many computers all over the world connected?
+The switch maps the **physical port to MAC address** translation in a memory cache called the **MAC Table**. It uses the MAC table to forward the packets to the correct recipients.
 
-> ### Router
->
-> A router is a device that can route messages to other devices using IP addresses, it is used to create **Wide Area Networks**. Devices connect to the router by also using pysical ports, using a bunch of chained routers one computer in Japan can send a message to a computer in Germany, all in a matter of seconds. They do it by keeping a database called a **Routing Table**.
->
-> The routing table is a table containing the information on how to route messages, what network is located on each of the router's ports. The router's job and scope is from endpoint to another enpoint.
->
-> A computer has to know the IP address of the machine it wants to send the message to through the routers.
+Machines can also send messages to all the connected machines, using a dedicated MAC address called **broadcast**. (FF:FF:FF:FF:FF:FF)
+
+### <font size=6>Router</font>
+The router is a device on the 3rd OSI layer. It's use is to route packets based on IP addresses. When multiple switches are connected to a router they create a *Wide Area Network*, also a WAN. Machines can also independently connect to the router. In order to connect a LAN to the internet it needs to have a router connected to it physically.
+
+Each network has an address, (like a street name), the router maps all the network addresses to the physical connection on a **Routing Table**. It then uses those *routes* in order to forawrd packet in-between LANs. Routers also have an ip address of their own and may connect to other routers in order to connect more networks together.
+
+### <font size=6>Default Gateway</font>
+
+A router, acting as the gateway in and out of the network. Machines inside the network will send it packets for routing when the recipient isn't a part of the network. And it will also route messages in the same way.
+
+### <font size=6>ARP - Address Resolution Protocol</font>
+
+ARP is a network protocol meant to resolve IP addresses into MAC addresses and vice versa. It does that by asking the entire network who owns that particular IP address and then asks them for their MAC address. Afterwards the asking machine will save the solution in a local cache called the **ARP Table**.
+
+<br><br>
+
+Alright, after we got that let's see what will happen in the situation where PC1 wants to send a message to PC3. Reminder: PC1 has to know PC3's IP address.
 
 ```
-+--------------10.0.0.x/24--------------+              +---------------10.0.1.x/24-------------+
-|            __   _                     |              |                     __   _            |
-|      PC1  [Ll] |=| ______             |              |             ______ [Ll] |=| PC3       |
-|           ==== '-' .1    \            |              |            /    .1 ==== '-'           |
-|                           \           | eth1    eth0 |           /                           |
-|                            \ +----+   |    +----+    |   +----+ /                            |
-|                             \| S1 |------> | R1 | <------| S2 |/                             |
-|                             /+----+   |    +----+    |   +----+\                             |
-|                            /          | .254    .254 |          \                            |
-|            __   _         /           |              |           \         __   _            |
-|      PC2  [Ll] |=| ______/            |              |            \______ [Ll] |=| PC4       |
-|           ==== '-' .2                 |              |                 .2 ==== '-'           |
-|                                       |              |                                       |
-+---------------------------------------+              +---------------------------------------+
+            network1 address                                        network2 address
+┌──────────────10.0.0.x/24──────────────┐              ┌──────────────10.0.1.x/24──────────────┐
+│            __   _                     │              │                     __   _            │
+│      PC1  [__] |=| ──────┐            │              │            ┌────── [__] |=|  PC3      │
+│ 10.0.0.1  ==== '-'       │            │ eth0         │            │       ==== '-'  10.0.1.1 │
+│                          │            │ 10.0.0.254   │            │                          │
+│                          │   ┌────┐   │    ┌────┐    │   ┌────┐   │                          │
+│                          ├──►│ S1 │───┼──► │ R1 │ ◄──┼───│ S2 │◄──┤                          │
+│                          │   └────┘   │    └────┘    │   └────┘   │                          │
+│                          │            │         eth1 │            │                          │
+│            __   _        │            │   10.0.1.254 │            │        __   _            │
+│      PC2  [__] |=| ──────┘            │              │            └────── [__] |=|  PC4      │
+│ 10.0.0.2  ==== '-'                    │              │                    ==== '-'  10.0.1.2 │
+└───────────────────────────────────────┘              └───────────────────────────────────────┘
 ```
 
-Let's assume a situation where PC1 wants to send a message to PC3. There are a few more things we need to know before we can fully imagine that.
+> PC1 knows that PC3 is not in their own network by compairing the net id in their IP addresses. It will try to send the ICMP packet to thr router but it doesn't know it's MAC address. PC1 will send an ARP query in the network, getting a response from R1.<br>
+(In that transaction that switch will learn both PC1 and R1's MAC addresses and bind their MAC addresses to their physical ports)
 
-> ### Default Gateway
->
-> The address that the message will be sent to when a device doesn't know who to send the packet to, it usually means that the message is meant for a machine outside the network. The gateway will also usually be the nearest router to computer. To all computers in the drawing above the default gateway will be the router (R1).
+> PC1 sends the message to R1, R1 knows that LAN `10.0.1.x` is connected through the other port and attempts to routes it there.
 
-> ### ARP - Address Resolution Protocol
->
-> Arp is a way to associate a MAC address to an IP address, When a device wants to know the IP address that is related to a certein MAC address it will send a broadcasted inquiry. The computer will ask all machine in the LAN "Who has the MAC address of [mac address]", it will also add their own IP and MAC addresses and will wait for a reply. The machine that the MAC belongs to can reply and send the message to the iquiring computer using the addresses it appended to the inquiry.
->
-> After "solving" for the IP address it will save that comparison inside a local database called the `ARP Table`.
+> R1 doesn't know what PC3's MAC address is so it sends an ARP query. PC3 will return a response. The switch S2 will learn and bind their MAC addresses.
 
-Alright, after we got that let's see what will happen in the situation where PC1 wants to send a message to PC3. **PC1 HAS TO KNOW PC3's IP ADDRESS**.
+> The router will send the message to PC3 using the newly found MAC address.
 
-PC1 knows that PC3 is not n their own network by compairing the IP addresses, `10.0.0.1` and `10.0.1.1`. PC1 will then try to send the message to the default gateway, but it doesn't know how to do that thought the switch because it only has it's IP so it will use ARP. The switch will send the inquiry to `PC2` and `R1`, `R1` will return a response. In that transaction that switch S1 will also learn both PC1 and R1's MAC addresses and bind them to their ports.
-
-Using the found MAC address PC1 will send the message to the router R1, R1 will know that the LAN `10.0.1.x` is on the other port so it will send it there, the router doesn't know what PC3's MAC address is so it will send an ARP inquiry. PC3 will return a response. The switch S2 will learn and bind their MAC addresses.
-
-The router will send the message to PC3 using the newly found MAC address then.
-
-If PC3 wants to return a response, it will send a message with PC1's IP address and R1's MAC address (it learnt it in from the ARP inquiry). The Router knows PC1's MAC address and it will send it to PC1.
+> If PC3 wants to return a response, it will send a message with PC1's IP address and R1's MAC address (it learnt it in from the ARP inquiry). The Router knows PC1's MAC address and it will send it to PC1.
 
 ```diff
 - (The explanation is way too long and there are some parts that appear more than once)
++ Summarized
 ```
