--- a/03. Bigous Protocolous.md
+++ b/03. Bigous Protocolous.md
@@ -142,6 +142,7 @@ The DNS protocol is used for "translating" between IP addresses and Domain Names
 
 ```diff
 - (I do not not think this is appropriate here there is a burn section!)
++ (But I wanna keep it here.)
 ```
 
 And there are more. 
@@ -188,11 +189,12 @@ Finally, the server will return a reponse to the client which it will use. Eithe
 LLMNR is used to **enable name resolutions** in places **where dns fails** to do so. LLMNR supports all DNS formats, types, and classes, while operating on a separate port from DNS (listening to queries on UDP/5355), and with a separate cache. LLMNR only operates on the local subnet, making it unviable as a DNS substitute.
 
 ### WHY WAS IT INVENTED
-LLMNR provides name resolution ability inside the local-link (physical network) when dns is unavialable/unreliable or when it fails to return an answer. It was introduced as an IPv6 work around to NBT-NS which only supports IPv4.
+LLMNR provides name resolution ability inside the LAN when dns is unavialable/unreliable or when it fails to return an answer. It was introduced as a work around to NBT-NS which only supports IPv4, while LLMNR supports both IPv6 and IPv4.
 
 ```diff
 - (As far as Im aware LLMNR works on IPv4 as well, check it...)
-- (I think that by local-link you mean LAN then itws not the physical network)
++ It was a misunderstanding with the wording.
+- (I think that by local-link you mean LAN then it's not the physical network)
 ```
 
 ### HOW DOES IT WORK
@@ -203,18 +205,19 @@ LLMNR provides name resolution ability inside the local-link (physical network) 
 
 > #### `LLMNR Responders recieve the request`
 >
-> Any host configured as an LLMNR responder in the local link gets the query and checks their LLMNR records, they return a response only if they are the **authorative responder** to the address queried. The response is sent as a **unicast to the query source address**. 
+> Any host configured as an LLMNR responder in the local link gets the query and checks their LLMNR records, they return a response only if they are the **authorative responder** (true owner of the name) to the address queried. The response is sent as a **unicast to the query source address**. 
 
 > #### `Sending Host Processes The Response`
 >
 > The host that send the query processes the response and adds the resolution to their LLMNR cache.
 
 
-Do note that **LLMNR should be disabled** in your local link network through GPO or other configuration due to it's critical security flaws.
+Do note that **LLMNR should be disabled** in your local link network through GPO or other configuration due to it's critical security flaws. LLMNR is susceptible to poisoning attack, where an attacker returns a response faster than the true authorative owner of the name.
 
 ```diff
 - (What do you mean by authorative responder?)
 - (What are the security flaws we should be aware of?)
++ Answered both.
 ```
 
 ###### [Back to top](#bigous-protocolous)
@@ -222,10 +225,11 @@ Do note that **LLMNR should be disabled** in your local link network through GPO
 
 
 ## Dynamic Host Configuration Protocol A.K.A DHCP
-###### *[#Layer-3] [#Portless]*
+###### *[#Layer-3] [#UDP/67] [#UDP/68]*
 
 ```diff
 - (It's not portless)
++ Added ports.
 ```
 
 DHCP is used to assigned unique IP addresses to hosts in the network automatically, it can also assign other network configuration like subnet mask, DNS server and Default gateway. DHCP can provide a client with all the parameters it needs in order to operate in the network.
@@ -265,8 +269,11 @@ at the end, when a computer wants to disconnect from the network it can send.
 > 
 > Client to server relinquishing network address and cancelling remaining lease.
 
+In cases where DHCP fails, Windows has a mechanism called APIPA (Adutomatic Private IP Addressing). This mechanism allows the computer to give itself an IP address without a DHCP server, on the reserved address range of 192.254.0.0 to 192.154.255.255. It finds unused IP addresses by sending an ARP query for an IP and waiting for a reply.
+
 ```diff
-- (What IP address would the compute ruse untilit will get one from the DHCP server?)
+- (What IP address would the computer use until it will get one from the DHCP server?)
++ Answered, it's 192.254.xxx.xxx.
 ```
 
 
@@ -294,27 +301,30 @@ To falicitate those network functions NetBIOS seperates to 3 services:
 > 
 > NetBIOS provides it's own type of network architechture where each computer is represented by a 16 byte `name`, 15 ASCII characters to represent the computer and the last as a bit-field that represents what type of services the machine provides. The name will then be registered to an ip address (Only IPv4), and will enable name resolution.
 > 
-> NBNS (NetBios Name Service) also acts as an "Alternative" method of name resolution incase DNS and LLMNR both fail, The names are resolved by WINS (Windows Internet Naming Service) Servers. Where, instead of Domain names the server resolves NB names to IP addresses. The Servers are used to balance networking loads and to avoid flooding the network with broadcasts.
+> NBNS (NetBios Name Service) also acts as an "Alternative" method of name resolution incase DNS and LLMNR both fail, The names are resolved by the respective owners of the NB-names. NBNS may also get answers from WINS (Windows Internet Naming Service) servers, where they act like DNS servers but for translating NB-Names. These servers may still be needed to support older Windows machines, but were outdated by other resolution protocols like DNS.
 > 
-> NOTICE: NBT Names are apply only to the local area network, they are not to be confused with domain names.
+> NOTICE: NBT Names apply only to the local area network, they are not to be confused with fully quallified domain names.
 
 ```diff
 - (Are WINS servers still used today? and are we required to have a WINS server in order to makes NBNS queries?)
++ Not really, and no. Updated.
 - (How the servers help to prevent foolding and balance networking load?)
++ Removed the problematic line.
 ```
 
 > #### `NetBIOS Session Service`
 > ###### *[\#TCP/139]*
 > 
-> Applications using NetBIOS can establish a NetBIOS over TCP (NBT) session with a "call" command, then communicate with "send" and "recieve" commands. Since NBSS uses TCP as it's base it allows for bigger messages, transmission control and loss recovery.
+> Applications using NetBIOS can establish a NetBIOS over TCP (NBT) session with a "call" command, then communicate with "send" and "recieve" commands. Since NBSS uses TCP as it's base it allows for bigger messages, transmission control and loss recovery. NBT is used to transport SMB communication.
 
 > #### `NetBIOS Datagram Service`
 > ###### *[\#UDP/138]*
 > 
-> Applications may also communicate over NetBIOS connectionless, using individual datagrams over the NetBIOS Datagram Service. The datgram services allows unicast, multicast and broadcast datagram messaging, using "group ips", an application can listen on a designated group ip to recieve a satagram sent to that group's members.
+> Applications may also communicate over NetBIOS connectionless, using individual datagrams over the NetBIOS Datagram Service. The datgram services allows unicast, multicast and broadcast datagram messaging, using "group ips", an application can listen on a designated group ip to recieve a satagram sent to that group's members. This service may be used by other protocols and for sending smaller amounts of data.
 
 ```diff
 - (For what connectionless NetBIOS is used for?)
++ Small amounts of data and other protocols.
 ```
 
 ###### [Back to top](#bigous-protocolous)
@@ -332,21 +342,27 @@ The idea for a terminal that can interface with the network was proposed on [rfc
 
 ### HOW DOES IT WORK?
 
-The telnet protocol is mostly used by the telnet subsystem in your machine, using that system you may connect to another machine with the protocol and send information (namely commands or their outputs) bi-directionaly using the command line interface. Telnet is strictly characterial, and work over platform as the subsystem can decode characters to match the system requirement.
+The telnet protocol is used from the command line. In order to use it you first need to launch the telnet subsystem (usually by typing the command: telnet). The subsystem is responsible for decoding characters and doing the behind the scenes interactions with the protocol itself. The protocol allows sending commands, outputs and data bi-directionally.
 
 ```diff
 - (What do you mean by telnet is used by subsystem in your machine?)
++ Changed the wording.
 ```
-Since at the time of the protocol's manifestation the cyber threat wasn't as potent, all communication over TelNet is sent as cleartext (Not encrypted). Given that, telnet has to be manually enabled with the newer systems nowadays.
+Since at the time of the protocol's manifestation the cyber threat wasn't as potent, all communication over TelNet is sent as cleartext (Not encrypted). Anyone looking at communications between the two endpoints can look at the contents of the messages (including credentials). Some Telnet implementations in router products even include hardcoded credentials in their code.
+Given that, telnet has to be manually enabled with the newer systems nowadays.
 
 However, telnet still has uses like:
 * Old Systems that don't support newer protocols like SSH.
 * Configuring routers and network devices.
 * Checking if ports are open.
 
+The port checking is done by entering `telnet <IP> <PORT>`, if the screen is blank the port is open. This may not always be successful since a firewall may be blocking your connection.
+
 ```diff
 - (Is there another vulnerability in telnet that we should be aware of?)
++ hardcoded creds, cleartexr transmission.
 - (How does telnet help me know if a port is open?)
++ telnet <IP> <PORT>
 ```
 
 
@@ -366,22 +382,22 @@ The protocol to transfer files over the net was first prposed in 1971 on [rfc 11
 ### HOW DOES IT WORK?
 FTP operates as a kind of abstraction between the user typing service specific, both hosts using the service will have a `protocol interperter (PI)` of either a cient or server type and a `protocol data transfer process (DTP)`.
 
-The service allows the user to type in commands on the service specific terminal, after connecting to the server. The commands are global to all machine platforms, and are not OS dependant. Like: `mkdir` to create a directory, `bye` to disconnect from the server ,`help` that calls small Noam for help, `USER` to send username and `PASS` to send password in order to authenticate.
+After forming a connection with the ftp server the user can enter commands to manage the remote files and the connection itself. Note that there are two sets of commands, one set of the protocol itself and one set of the subsystem the user is using. The user will use the subsystem's commands like: `mkdir` to create a directory, `bye` to disconnect from the server and `help` that calls small Noam for help. Those commands will translate into protocol commands that will be sent to be interpreted by the PI.<font size=1>(for the full list of protocol commands, [press me](https://en.wikipedia.org/wiki/List_of_FTP_commands))</font>
 
 ```diff
 - (Calling him small Noam is offensive and disrespectful!!)
++ He is physically smaller than the big Noam!
 - (Are there any more commands?)
++ Yes.
 ```
 
 > #### `Commands`
 >
-> Using a terminal the user can send and extract files from the conneted host. The commands and files are transferred on two different data streams.
-Firstly, the `PI` will initiate a `control connection` with the other endpoint on the configured listening port (defaultly 21). On that connetion it will send commands and recieve output, that way the file transmission will not hinder command operations.
+> Using a terminal the user can send and extract files from the conneted host. The commands and the files are transferred on two different data streams.
+First, the `PI` will initiate a `control connection` with the other endpoint on the configured listening port (by default 21). On which it will send commands and recieve output, that way the file transmission will not hinder command operations.
 > 
-> BIG DISCLAIMER
-> 
-> Just like the TelNet, at the time of this protocol's creation the cyber threat wasn't as prevalent. Due to this, commands and file data are sent over as **cleartext**!!!
-> 
+> BIG DISCLAIMER<br>
+> Just like the Telnet, at the time of this protocol's creation the cyber threat wasn't as prevalent. Due to this, commands and file data are sent over as **cleartext**!!! 
 > So like, don't use it :D use FTPS instead ;) xoxo.
 
 ### FILE TRANSFER
@@ -393,9 +409,12 @@ Firstly, the `PI` will initiate a `control connection` with the other endpoint o
 > There are two methods in which it may connect:
 > * Active - The server will initiate the connection to the user's host from port 20.
 > * Passive - If there is a FW in the network that blocks incoming connections the user's host will be the one to initiate the connection on an agreed high port.
+>
+> By default the server's DTP will be in the active state, and can be set to passive,
 
 ```diff
 - (How can the computers know if to choose active or passive?)
++ Connection is active by default, can be changed to passive manually.
 ```
 
 > #### `Transfer Modes`
@@ -412,7 +431,7 @@ Firstly, the `PI` will initiate a `control connection` with the other endpoint o
 > * Blocking    - The file data is dissected into blocks and sent 1 by one. At the beginning of the block `3 header bits` are added to catalouge the block.
 > * Compressing - For really big files there is the option to operate a "run-length encoding" function on the data to reduce it's size. Though this is pretty useless as compression happens anyways in other aspects of networking and file system management.
 
-> The FTP protocol acts as a ftp-specific terminal on the remote machine, giving the user the ability to input commands to afect the remote machine. The main goal of ftp is to manage remote data and extract it.
+> The FTP protocol acts as a ftp-specific terminal on the remote machine, giving the user the ability to input commands to affect the remote machine. The main goal of ftp is to manage remote data and extract it.
 
 
 ###### [Back to top](#bigous-protocolous)
@@ -434,27 +453,45 @@ There are several differences between `FTP` and `TFTP`:
 > #### `Transportation`
 >
 > Ftp uses tcp as it's transportation protocol, tftp uses udp.
+> It does that because UDP is the simplest traport protocol, 
 
 > #### `Use`
 >
 > Ftp is used to transfer files and run commands over connected endpoints, tftp is mainly used to transfer configuration files on the LAN.
 
+> #### `Features`
+> 
+> TFTP lacks a lot of functionality that FTP posseses, like listing directories.
+
 ### HOW DOES IT WORK?
 
-This protocol too works on a `Client/Server` basis, note that some concepts and terms carry over from the FTP section.
+This protocol too works on a `Client/Server` basis, note that some concepts and terms carry over from the FTP section. Except for the transportation method, lack of authentication and commands (these commands are subsystem commands):
+
+`Connect / Open` - Used to connect to the remote machine, note that since the protocol is carried over UDP the connection isn't maintained.<br>
+`Get` - Gets a file from the remote machine.<br>
+`Put` - Puts a file on to the remote machine.<br>
+`Mode` - Set the transfer mode of the "connection", either binary, ASCII, or octet.<br>
+`Help` - Display a help message for the commands.<br>
+`Rexmt` - Change the retransmit timer interval.<br>
+`Status` - Show the parameters set, like retransmit timer, remote machine, mode and tracing.
+`Trace` - Enable packet tracing.
+`quit` - Quit the connection & exit tftp.
+
 
 ```diff
-- (What commends are avilable in TFTP?)
+- (What commands are avilable in TFTP?)
++ could only find subsystem commands.
 ```
 
 > #### `DOWNLOAD`
 >
 > The way that the client sends commands to the server stays the same. The server listens for connections on UDP/69 (haha :D) and the client can  initiate a connection on it from a high port and transmits commands over it. Then once recieving a command to download a file, the server will open up another tftp process and connects back to the client high port.
 >
-> The way file transmission works is the server `breaks the needed file` into a `series of blocks` and send them to the client one by one `on UDP`. The server will then listen for an `acknowledgment` that the file block was recieved and send the next block in the series.
+> The way file transmission works is the server `breaks the needed file` into a `series of blocks` and send them to the client one by one `on UDP`. The server will then listen for an `acknowledgment` that the file block was recieved and send the next block in the series, or retransmit the last block if it wasn't acknowledged in time.
 
 ```diff
 - (Why does it use UDP if it requires acknowledgment?)
++ It's simple and compact so it was chosen.
 ```
 
 > #### `UPLOAD`
@@ -471,63 +508,63 @@ This protocol too works on a `Client/Server` basis, note that some concepts and 
 ## HyperText Transfer Protocol A.K.A HTTP
 ###### *[#Layer-7] [#TCP/80]*
 
-HTTP is the protocol used to send web pages over the internet. This is a very broad definition of the protocol but we will get into it later (Like I did to your mom).
+HTTP is the protocol used to send web pages over the internet. This is a very broad definition of the protocol but we will get into it later.
 
 ```diff
 - (NFDL)
++ Removed :(
 ```
 
 ### OVERVIEW
 
-Http evolved so much over the years so I'll ty to summarize it to as little as possible.
-
-Overall, HTTP works as a request response type protocol, just like dns and dhcp. The whole point of it is to get the hosted webpage from the server, like "https://www.google.com" where I research this stuff or "jokes.moomoo.co.il" where I get my 'your mom jokes'.
+Overall, HTTP works as a request response type protocol, just like dns and dhcp. The whole point of it is to get the hosted webpage from the server, like "https://www.google.com" where I research this stuff or "http://jokes.moomoo.co.il" where I get my 'your mom jokes'.
 
 [In the beninging](https://www.youtube.com/watch?v=fWKB8zdVM-U) the internet was in it's diapers, all you could find are super simple webpages like blogs. There was no need for a complicated protocol to transfer this data and that's where HTTP came in.
-![The Original Spacejam Website](https://https://www.themarysue.com/wp-content/uploads/2010/12/SpaceJam_blankdcr.png)
 ###### pretty simple right?
 
 ```diff
 - (There is no need to sum up so much about the protocol history I need the information of how it works now)
++ I shortened it a bit.
 - (Your url is broken)
++ Removed.
 ```
 
 > #### `HTTP/0.9`
 > 
 > It was used to send the HTML code that built the site as plaintext to the client visiting the site. **Emphasis on cleartext**.
-> On this protocol you only used mentioned a method (GET) and a resource in your request.
+> In this version, all that you had was simple methods (like GET).
+
 ```diff
 - (Could not understand the last sentence)
++ Fixed.
 ```
 
 > #### `HTTP/1.0`
 >
-> This version of HTTP added a `header`, in the header was a lot of information regarding the session and request. Most importantly the method and resource.
-> 
-> It added two more methods, POST and HEAD that allowed the user to send data to the site, and Head that returns the header information (metadata).
->
-> It added content types, so that from now on you could send more types of content and not only HTML. Like your mother, except the fact she wont fit on the bandwith :(
+> This version of HTTP added a `header`, in the header was a lot of information regarding the session and request.<br>
+> It added two more methods, POST and HEAD that allowed the user to send data to the site, and Head that returns the header information (metadata).<br>
+> It added content types, so that from now on you could send more types of content and not only HTML. For example, video or pictures.
 
 ```diff
 - (Your jokes are too repetetive and it's annoying me)
++ It was dumb tbh.
 ```
 
 > #### `HTTP/1.1`
 >
-> This version was introduced only a year after the last one and it built upon it. We're talking:
+> This version added:
 > * **Host header** - to identify servers that have multiple Domain Names.
-> * **Persistent connections** - HTTP now keeps it's connection alive after sending a request and doesn't open a new session for each request (Which takes a full RTT thanks to the TCP handshake.. Ugh, digustang).
-> * **6 New methods** that were really helpful in the usage of the protocol. (PUT, PATCH, DELETE, CONNECT, TRACE, OPTIONS)
->
+> * **Persistent connections** - HTTP now keeps it's connection alive after sending a request and doesn't open a new session for each request (Which takes a full RTT thanks to the TCP handshake.. digustang).
+> * **6 New methods** that were really helpful in the usage of the protocol. (PUT, PATCH, DELETE, CONNECT, TRACE, OPTIONS)<br>
 > Though the protocol **still communicated over cleartext**, which wasn't very cool.
 
-> #### `The latest version: HTTP/2.0`
+> #### `HTTP/2.0 The latest and greatest! (for now)`
 >
 > This protocol ought to make things a whole lot better:
 > * **Multiplexing** - Now you can send multiple requests on multiple concurrent connections that represent a single session using multiple TCP connections!
-> * **Prioritizing** - Sending more than one request? Tell what you want to receive first!
+> * **Prioritizing** - Sending more than one request? Tell us what you want to receive first!
 > * **Automatic Compression** - Automatic [Gzip](10web.io/site-speed-glossary/gzip-compression/) compression.
-> * **Connection reset** - The option to terminate and reestablish a connection with the server, if for some reason you need it.
+> * **Connection reset** - The option to terminate and reestablish a connection with the server, if you need it.
 > * **Server Push** - Let the server give you all the commonly requested data before you even ask for it, this let's it load balance.
 
 ### HOW DOES IT WORK?
@@ -542,15 +579,14 @@ Let's break it down one by one, start with the most simple.
 
 > #### `Methods and Responses`
 >
-> Http works as a `Master-Slave` or `Request-Response`. The client sends a `DATA Frame` that includes a `method` to the server and the server returns a response. Like, the client makes a request for a webpage and the server can return the webpage if it has it, or return an error if something went wrong.
->
-> The method for requesting content off of an HTTP is called `GET`. When a client sends a GET request the server will look for that resource in it's directory and send it over, most of the time encoded.
-> This method constitutes most of the protocol's use, when loading a website on your browser your machine makes a GET request for all of the resources that need to be displayed, those can be:
+> Http works as a `Master-Slave` or `Request-Response`. The client sends a `DATA Frame` that includes a `method` to the server and the server returns a response.
+> The method for requesting the content of a webpage is called `GET`. When a client sends a GET request the server will look for that resource in it's directory and send it.
+> This method constitutes most of the protocol's use, when loading a webpage on your browser your machine makes a GET request for all of the resources that need to be displayed, those can be:
 > * ALL of the images, videos and gifs.
 > * The website's HTML code.
 > * The website's JS scripts, CSS code.
 >
-> When a resource if found the server will return a "200 OKAY" response, that means that the request was processed and replied to correctly. Otherwise it may return the infamous "404" error, but we will get to that later.
+> When a resource is found the server will return a "200 OKAY" response, that means that the request was processed and replied to correctly. Otherwise it may return the infamous "404" error, but we will get to that later.
 
 > #### `Methods and Response Codes`
 >
@@ -561,14 +597,17 @@ Let's break it down one by one, start with the most simple.
 > * `PUT`       Create or replace an existing resource on the server side.
 > * `DELETE`    Delete a resource on the server.
 > * `CONNECT`   Used to tunnel a connection to an http server through a VPN.
+>
+> Note that web browsers only supports a few method like GET and POST, so in order to use methods like PUT you would need to have a 3rd party addon or software. In the case of PUT you would also need credentials with permissions to change the website.
 
 ```diff
 - (Can anyone just use PUT and change the resource on the server side?)
++ Nope.
 ```
 
 > And there are a few more.
 >
-> Reponse codes are numerical numbers that represent the response that happened on the server, if the processing of the request was handled fine then the code will be **200**, if a resource was not found then the code can be **404**. Response codes are broken down into 5 families, dictated by the first digit (the hundreds digit):
+> Reponse codes are numerical numbers that represent what happened on the server. Response codes are broken down into 5 families, dictated by the first digit (the hundreds digit):
 >
 > | CODE      | FAMILY                            |
 > | :-------: | :-------------------------------- |
@@ -582,28 +621,13 @@ Let's break it down one by one, start with the most simple.
 
 > #### `Multiplexing Connections`
 >
-> Using HTTP/2.0 a client can send multiple `Frames` simultaneously using a concept called `STREAMs`. A `stream` is a bi-directional flow of data betwen the data and the server, using a `stream` the client sends and receives data from the server.
+> Using HTTP/2.0 a client can send multiple `Frames` simultaneously using a concept called `STREAMs`. A `stream` is a bi-directional flow of data betwen the client and the server, using a `stream` the client sends and receives data from the server. Multiplexing is when the client and server uphold several streams which they use to process requests simultaneously, under a single session.
 
 
 ```diff
 - (Between the data and the server?)
++ Typo, fixed.
 ```
-
-
-> Basically all communications over the networks happen on streams, what's special about HTTP/2.0 is that it allows opening and managing multiple streams under one session. Then the protocol can send request over different streams and not be bottlenecked by a big resource.
-> 
-> * A stream **can** be opened and closed by either client or server
-> * A stream **can** be uni-directional or bi-directional.
-> * A stream **can** be given a priority.
-> * A stream **has** an identification number.
-> * A stream **can** be dependant on another stream.
-> 
-> HTTP provides many `FRAME`s for managing streams.
->
-> * `DATA`          This is the frame that will contain http request and response data. If the **END_STREAM** flag was set in the frame, then this frame will be the last DATA frame to be sent on the current stream.
-> * `HEADER`        This frame is sent in order to `create a new stream`, inside the frame will be parameters like: Stream identifier, dependencies and priority.
-> * `PRIORITY`      This frame is used to change the priority of the stream.
-> * `PUSH_PROMISE`  This frame tells the peer that you want to create a stream/streams.
 
 ###### [Back to top](#bigous-protocolous)
 ---------------------------------------------------------------------------------------------------------------------------------------------------
