--- a/03. Bigous Protocolous.md
+++ b/03. Bigous Protocolous.md
@@ -44,70 +44,64 @@ The big protocol wikipedia.
 
 ---------------------------------------------------------------------------------------------------------------------------------------------------
 
-## Internet Control Message Protocol A.K.A [ICMP](https://www.urbandictionary.com/define.php?term=Spell%20iCup)
+## Internet Control Message Protocol A.K.A ICMP
 ###### *[#Layer-3] [#Portless]*
 
-ICMP, or **I**nternet **C**ontrol **M**essage **P**rotocol is a protocol used to send control messages relating to the Internet protocol (IP).
+[ICMP](https://www.urbandictionary.com/define.php?term=Spell%20iCup), or **I**nternet **C**ontrol **M**essage **P**rotocol is a protocol used to send control messages relating to the Internet protocol (IP).
 
 ### WHY WAS IT INVENTED
 Since the implementation of IP is not meant to be absolutely reliable and it can sometimes mess up, The ICMP protocol can be used to return or send feedback about problems that can arise when communicating with a host. However the ICMP protocol does not act to make the IP more reliable and does not guarantee 100% reliablility itself incase IP fails to deliver. ICMP will usually report on delivery errors of packets and no ICMP packet will be sent about a lost ICMP packet.
 
 ### HOW DOES IT WORK
-An ICMP packet is used to inform a device in the routing path of a packet (including the source and destination) of a failure or change in the delivery of the packet (Except for `ICMP Type`s 0 and 8). The type and structure of the packet is determined by the `ICMP Type` parameter in the header. Each type also has an `ICMP Code` that determines the subject of the packet.
+An ICMP packet is used to inform a device in the routing path of a packet (including the source and destination), of a failure or change in the delivery of the packet (Except for ICMP Types 0 and 8). The type and structure of the packet is determined by the ICMP **Type** parameter in the header. Each type also has an ICMP **Code** that determines the subject of the packet.
 
 ### ICMP TYPE SPECIFICATION EXAMPLES
 
-#### `[0 & 8] Echo & Echo Reply`
+<font size=5>**Echo & Echo Reply**</font>
 
-An ICMP Echo is used to check the connectivity from one endpoint to another, and ICMP Echo Reply is used to reply to Echo requests. Endpoints can send an `ICMP Echo Request` to another endpoint which will get routed to them and if the destination machine recieves the request it will send back an `ICMP Echo Reply`.
+An ICMP Echo is used to check the connectivity from one endpoint to another, and ICMP Echo Reply is used to reply to Echo requests. Endpoints can send an ICMP **Echo Request** to another endpoint which will get routed to them and if the destination machine recieves the request it will send back an ICMP **Echo Reply**.
 
-> #### `Types`
-> |   |                                     |
-> |---|-------------------------------------|
-> | 8 | Echo Request                        |
-> | 1 | Echo Reply                          |
+<font size=4>Types</font>
+|   |                                     |
+|---|-------------------------------------|
+| 8 | Echo Request                        |
+| 1 | Echo Reply                          |
 
-> #### `Code`
->
-> 0 (Default value)
+<font size=4>Code</font><br>
+0 (Default value)
 
-#### `[3] Destination Unreachable`
+<font size=5>**Destination Unreachable**</font>
 
-An ICMP `Destination Unreachable` message will be recieved when a packet can't be delievered because a waypoint couldn't route it, the destination host service could not accept the packet (IP protocol or port isn't active), the gateway determined that the destination is unreachable or a DF (Dont Fragment) interuppted a fragmented packet and it was dropped due to it.
+An ICMP Destination Unreachable message will be recieved when a packet can't be delievered because a waypoint couldn't route it, the destination host service could not accept the packet (IP protocol or port isn't active), the gateway determined that the destination is unreachable or a DF (Dont Fragment) interuppted a fragmented packet and it was dropped due to it.
 
-> #### `Type`
->
-> 3
+<font size=4>Type</font><br>
+3
 
-> #### `Codes`
->
-> |   |                                     |
-> |---|-------------------------------------|
-> | 0 | net unreachable                     |
-> | 1 | host unreachable                    |
-> | 2 | protocol unreachable                |
-> | 3 | port unreachable                    |
-> | 4 | Fragmantation needed and DF was set |
-> | 6 | Source route failed                 |
-> 
-> Codes 0, 1, 4 and 5 can be recieved from a gateway. Codes 2 and 3 can be recieved from a host.
+<font size=4>Codes</font>
+|   |                                     |
+|---|-------------------------------------|
+| 0 | net unreachable                     |
+| 1 | host unreachable                    |
+| 2 | protocol unreachable                |
+| 3 | port unreachable                    |
+| 4 | Fragmantation needed and DF was set |
+| 6 | Source route failed                 |
+Codes 0, 1, 4 and 5 can be recieved from a gateway. Codes 2 and 3 can be recieved from a host.
 
-#### `[11] Time Exceeded`
+<font size=5>**Time Exceeded**</font>
 
-> An ICMP `Time Exceeded` if a packet's TTL reaches 0 while traveling to it's destination, the final waypoint it encoutered may send a Time Exceeded message to the sender host, or, if the desination host cannot reassemble a fragmented packet in the time limit it may send a Time Exceeded to the sender host.
+An ICMP `Time Exceeded` if a packet's TTL reaches 0 while traveling to it's destination, the final waypoint it encoutered may send a Time Exceeded message to the sender host, or, if the desination host cannot reassemble a fragmented packet in the time limit it may send a Time Exceeded to the sender host.
 
-> #### `Type`
-> 
-> 11
+<font size=4>Type</font><br>
+11
 
-> #### `Codes`
-> 
-> |   |                                     |
-> |---|-------------------------------------|
-> | 0 | ttl exceeded in transit             |
-> | 1 | fragment reassembly time exceeded   |
->
-> Code 0 can be sent from a waypoint, code 1 can be sent from a host.
+<font size=4>Codes</font>
+|   |                                     |
+|---|-------------------------------------|
+| 0 | ttl exceeded in transit             |
+| 1 | fragment reassembly time exceeded   |
+
+Code 0 can be sent from a waypoint, code 1 can be sent from a host.
 
 
 
